Map the type of the error

--- a/package.yaml
+++ b/package.yaml
@@ -14,6 +14,7 @@ description:         Please see the README on GitHub at <https://github.com/dvek
 dependencies:
   - base >= 4.7 && < 5
   - text        >= 1.2    && < 2.0
+  - either
 
 library:
   source-dirs: src
