--- a/package.yaml
+++ b/package.yaml
@@ -13,7 +13,7 @@ description:         Please see the README on GitHub at <https://github.com/dvek
 
 dependencies:
   - base >= 4.7 && < 5
-  - text        >= 1.2    && < 2.0
+  - text        >= 1.2
   - either
 
 library:
